TrackDummyServiceImplementation done through @Qualifier

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,14 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+*.cmd
+mvnw
+.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
+.mvn/wrapper/MavenWrapperDownloader.java
