--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8095
 spring.h2.console.enabled=true
+spring.profiles.active=dev
+db.driver =org.hsqldb.jdbcDriver
+db.username	=sa
+db.password	=""
+db.tablePrefix =_prefix
