Application properties created uniquely for h2 and sql databases

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 profile.prod=dev.profiles
-db.driverClass=org.h2.Driver
-db.connectionURL=jdbc:h2:mem:testdb
-db.username=sa
-db.password=""
+spring.datasource.url= jdbc:mysql://localhost:3306/user
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create-drop
