Changes done in properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
-profile.prod=dev.profiles
+
+profile.name=prod.profiles
 spring.datasource.url= jdbc:mysql://localhost:3306/user
 spring.datasource.username=root
 spring.datasource.password=root
