--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8095
-spring.h2.console.enabled=true
-spring.profiles.active=dev
+spring.data.mongodb.uri=mongodb://localhost:27017/track
+spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
 
